force-app/main/default/objects/Account/fields/Number_of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contacts__c</fullName>
    <description>Number of Contacts</description>
    <inlineHelpText>Number of Contacts</inlineHelpText>
    <label>Number of Contacts</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>