force-app/main/default/objects/Account/fields/Source_Count__c.field-meta.xml
<CustomField>
    <fullName>Source_Count__c</fullName>
    <description>Source Count</description>
    <inlineHelpText>Source Count</inlineHelpText>
    <label>Source Count</label>
    <summaryForeignKey>Source__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>