force-app/main/default/objects/Account/fields/Total_Number_of_Coins__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Coins__c</fullName>
    <description>Total Number of Coins</description>
    <inlineHelpText>Total Number of Coins</inlineHelpText>
    <label>Total Number of Coins</label>
    <summarizedField>testChildObject__c.Number_of_Coins__c</summarizedField>
    <summaryForeignKey>testChildObject__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>