force-app/main/default/objects/Account/recordTypes/Test_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Test_Record_Type</fullName>
    <active>true</active>
    <label>Test Record Type</label>
</RecordType>