force-app/main/default/objects/Account/validationRules/Account_Site_Cannot_Be_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Site_Cannot_Be_Null</fullName>
    <active>false</active>
    <description>Account_Site_Cannot_Be_Null</description>
    <errorConditionFormula>ISBLANK( Site )</errorConditionFormula>
    <errorDisplayField>Site</errorDisplayField>
    <errorMessage>Account Site Cannot Be Blank!</errorMessage>
</ValidationRule>