force-app/main/default/objects/Account/validationRules/TestRule.validationRule-meta.xml
<ValidationRule>
    <fullName>TestRule</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Name )</errorConditionFormula>
    <errorMessage>An account name is required.  Please enter account name and save it again</errorMessage>
</ValidationRule>