force-app/main/default/objects/Account/validationRules/TestRulePhone.validationRule-meta.xml
<ValidationRule>
    <fullName>TestRulePhone</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Phone )</errorConditionFormula>
    <errorMessage>A  phone number is required.  Please enter phone number and save it again</errorMessage>
</ValidationRule>